# sisyphus-mirror-py

./: .gitignore  CHANGELOG.rst  LICENSE  README.rst  README_RU.rst  pyproject.toml
.github/workflows/: ci.yml
src/sisyphus_mirror/: __main__.py  checks.py  cli.py  config.py  consts.py  errors.py  logger.py  mirror.py  regexp.py  typedefs.py
tests/: test_cli.py  test_config.py  test_mirror.py
