[project]
name = "sisyphus-mirror"
description = "A modern Python implementation of the tool for mirroring the Sisyphus repository."
keywords = ["alt", "altlinux", "linux", "mirror", "mirroring", "repository", "sisyphus"]
version = "1.0.0"

license = "MIT"
readme = "README.rst"
authors = [
  {name = "Ruslan Ilyasovich Gilfanov", email = "rigilfanov@yandex.ru"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Mirroring",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.6",
]

[project.urls]
Repository = "https://github.com/rigilfanov/sisyphus-mirror-py"
Issues = "https://github.com/rigilfanov/sisyphus-mirror-py/issues"

[project.scripts]
sisyphus-mirror = "sisyphus_mirror.__main__:main"

[tool.mypy]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["func-returns-value"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "COM819",
  "D",
  "DTZ005",
  "EXE002",
  "G004",
  "PLW0603",
  "S603",
  "S607",
  "SIM102",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10

[tool.uv]
package = true
