[project]
name = "sisyphus-mirror"
description = "A modern Python implementation of the tool for mirroring the Sisyphus repository."
keywords = ["alt", "altlinux", "linux", "mirror", "mirroring", "repository", "sisyphus"]
version = "1.2.0"

license = "MIT"
readme = "README.rst"
authors = [
  {name = "Ruslan Ilyasovich Gilfanov", email = "rigilfanov@yandex.ru"},
]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Environment :: Console",
  "Intended Audience :: System Administrators",
  "Operating System :: POSIX :: Linux",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Internet",
  "Topic :: System",
  "Topic :: System :: Archiving",
  "Topic :: System :: Archiving :: Mirroring",
  "Topic :: System :: Systems Administration",
  "Topic :: Utilities",
]

requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "mypy>=1.19.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]

[project.urls]
Homepage = "https://github.com/rigilfanov/sisyphus-mirror-py"
Repository = "https://github.com/rigilfanov/sisyphus-mirror-py"
Issues = "https://github.com/rigilfanov/sisyphus-mirror-py/issues"
Changelog = "https://github.com/rigilfanov/sisyphus-mirror-py/blob/master/CHANGELOG.rst"

[project.scripts]
sisyphus-mirror = "sisyphus_mirror.__main__:main"

[tool.mypy]
files = ["src", "tests"]

[[tool.mypy.overrides]]
module = "tests.*"
disable_error_code = ["func-returns-value"]

[tool.ruff]
line-length = 88

[tool.ruff.lint]
select = ["ALL"]
ignore = [
  "ANN401",
  "B008",
  "COM819",
  "D",
  "DTZ005",
  "EXE002",
  "G004",
  "PLW0603",
  "RUF009",
  "S603",
  "S607",
  "SIM102",
  "TRY003",
]

[tool.ruff.lint.per-file-ignores]
"tests/*" = ["S101"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 10

[tool.uv]
package = true
